# is-wire

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Jenkinsfile  README.md  bootstrap.sh  build.sh  conanfile.py  conanfile.txt  package.py
benchmark/: CMakeLists.txt  client.cpp  service.cpp
cmake/: FindSimpleAmqpClient.cmake  Findrabbitmq-c.cmake  ImportFinder.cmake  ImportProject.cmake
etc/docker/: Dockerfile.gcc54  Dockerfile.gcc7-arm7hf
wire/: CMakeLists.txt  client.t.cpp  core.hpp  is-wireConfig.cmake  rpc.hpp  service.t.cpp
wire/core/: CMakeLists.txt  channel.cpp  channel.hpp  content_type.hpp  is-wire-coreConfig.cmake  logger.cpp  logger.hpp  message.cpp  message.hpp  message.t.cpp  opentracing.cpp  opentracing.hpp  status.cpp  status.hpp  subscription.cpp  subscription.hpp
wire/core/internal/: amqp.cpp  amqp.hpp  amqp.t.cpp  amqp_ot_carrier.cpp  amqp_ot_carrier.hpp  utils.cpp  utils.hpp  utils.t.cpp
wire/rpc/: CMakeLists.txt  context.cpp  context.hpp  interceptor.hpp  is-wire-rpcConfig.cmake  log-interceptor.cpp  log-interceptor.hpp  metrics-interceptor.cpp  metrics-interceptor.hpp  service-provider.cpp  service-provider.hpp
